# SynchronVM

./: .gitignore  LICENSE  Makefile  README.md  codemeta.json  task.txt
backend/: Makefile  TAGS  sense-vm.mk  vm-conf.h
backend/app-template/: Makefile  main.c  vm-conf.h
backend/include/: CAM.h  CONFIG_DEFINES.h  Context.h  INCLUDE.md  RTS.h  RTSIO.h  SVM_DEBUG.h  VM.h  VMC.h  chan_queue.h  chan_recv_queue.h  chan_send_queue.h  channel.h  event.h  ffi_util.h  flags.h  heap.h  iochannel.c  iochannel.h  priorityqueue.h  queue.h  register.h  scheduler.h  stack.h  superscheduler.h  svmdefs.h  typedefs.h
backend/include/ll/: ll_als.h  ll_bme280.h  ll_button.h  ll_dac.h  ll_driver.h  ll_led.h  ll_midi.h  ll_pwm.h  ll_sys_time.h  ll_time.h  ll_uart.h
backend/platform/: README.md
backend/src/: .#RTS.c  CAM.c  RTS.c  RTSIO.c  VMC.c  chan_queue.c  chan_recv_queue.c  chan_send_queue.c  channel.c  event.c  ffi_util.c  heap.c  iochannel.c  priorityqueue.c  queue.c  scheduler.c  stack.c
backend/src/ll/: ll_als.c  (+6 more)
backend/tests/: Makefile  eval_test_1.c  heap_test_1.c  heap_test_2.c  heap_test_3.c  readme.md  stack_test_0.c  vm-conf.h  vmc_test.c
backend/tests/hal/zephyr/test_hal/: CMakeLists.txt  Makefile  README.md  nrf52_module.overlay  prj.conf  stm32f4_discovery.overlay  test.X  vm-conf.h
backend/tests/hal/zephyr/test_hal/src/: main.c
backend/tests/ll/lldriver-test/: CMakeLists.txt  Makefile  prj.conf
backend/tests/ll/lldriver-test/src/: main.c
ch_sense/: Makefile  driver_gpio.c  driver_gpio.h  driver_rts_if.h  flash.sh  halconf.h  main.c  mcuconf.h  stm32f407g.cfg  vm-conf.h
chibios-examples/blinky/: blinky.cam  svm_chibios_conf.h
chibios-examples/button_blinky/: button_blinky.cam  svm_chibios_conf.h  vm-conf.h
chibios-examples/concurrency2/: Makefile  conc.cam
chibios-examples/dac_square_wave/: dac_square_wave.cam
chibios-examples/debug/: Makefile  bad_tailrec.cam  button_fsm.cam  dac_square_wave.cam  dac_square_wave1.cam  dac_square_wave5.cam  dac_square_wave6.cam  dac_square_wave7.cam  dac_square_wave9.cam  svm_chibios_conf.h
chibios-examples/dountil/: blinky.cam
chibios-examples/load_test/: button_blinky.cam  vm-conf.h
chibios-examples/mut_rec_blinky/: blinky.cam
chibios-examples/pwm_motor/: Makefile  pwm.cam  pwm_broken.cam  svm_chibios_conf.h  vm-conf.h
chibios-examples/silly/: out.svm  silly.cam  svm_chibios_conf.h  vm-conf.h
chibios-examples/tripple_press/: vm-conf.h
chibios-examples/twinkle/: note_alternator.cam  twinkle.cam  twinkle.svm  vm-conf.h
chibios-examples/twinkle2/: Makefile  twinkle.cam  vm-conf.h
doc/notes/: Bughunt.md  Driver_identity.md  Future_work.md  IO_design.md  Melody.lhs  Melody.md  Memory.md  Process_termination.md  Scheduler.md  Send_and_recv_compound_data.md  SensevsActors.md  Time.md  concurrency_io.md  stm32_and_freertos.md
doc/trusted/: TrustedExample.cam
examples/blinky/: Makefile  blinky.cam  blinky.svm  out.svm
examples/button_blinky/: Makefile
examples/concurrency1/: conc.cam  svm_chibios_conf.h  vm-conf.h
examples/concurrency3/: conc.cam
examples/dac_square_wave/: Makefile  vm-conf.h
examples/debug/: bad_tailrec2.cam  button_fsm.cam  button_fsm2.cam  dac_square_wave.cam  dac_square_wave.svm  dac_square_wave10.cam  dac_square_wave11.cam  dac_square_wave12.cam  dac_square_wave4.cam  dac_square_wave8.cam  mutrec_twinkle.cam
examples/mut_rec_blinky/: blinky.cam  vm-conf.h
examples/pwm_motor/: out.svm
examples/silly/: Makefile  out.svm  silly.cam  silly.svm  vm-conf.h
examples/tripple_press/: Makefile  tripple.cam
experiments/cam/: ChangeLog.md  LICENSE  cam.cabal  package.yaml
experiments/lc3/: README.md
experiments/zephyr/: init_zephyr.sh
experiments/zephyr/client/: CMakeLists.txt  README.md  prj.conf
experiments/zephyr/client/src/: main.c
experiments/zephyr/zephyr-code-from-ssm-edsl/scanner/: CMakeLists.txt  README.md  get_peng.sh  prj.conf  stm32f4_discovery.overlay
experiments/zephyr/zephyr-code-from-ssm-edsl/scanner/src/: main.c
experiments/zephyr/zephyr-code-from-ssm-edsl/ssm-zephyr/: CMakeLists.txt  Makefile  nrf52840dk.overlay  nrf52_module.overlay  prj.conf
experiments/zephyr/zephyr-code-from-ssm-edsl/ssm-zephyr/peng-platform/nrf52/include/: peng-platform.h
experiments/zephyr/zephyr-code-from-ssm-edsl/ssm-zephyr/src/: blinky.c  blinky.h  led.c  led.h  main.c  usb_cdc.h
frontend/: bugs.txt
frontend/CamIoT/: CamIoT.cabal  ChangeLog.md  camiot-mode.el  runchecker.sh  stack.yaml  test.cam
frontend/CamIoT-v2/: CamIoT-v2.cabal  ChangeLog.md  README.md  package.yaml  stack.yaml  test.cam
frontend/test/: runchecker.sh  runtests.sh  test13.cam  test15.cam  test16.cam  test19.cam  test21.cam  test24.cam  test25.cam  test26.cam  test28.cam  test4.cam
frontend/tiny_camiot/: test.cam
include/: CAM.h  heap.h  register.h  typedefs.h
language/tiny_camiot/: Makefile  tiny_camiot.bnfc
middleware/: README.md
middleware/cam/: cam.cabal  package.yaml  stack.yaml
papers/: README.md
spec/: Makefile  architecture.md  motivations.md  sec_threat_analysis.md  template.md
spec/refs/: refs.bib
src/: heap.c  hello_world.c
tests/: Makefile  heap_test_0.c  heap_test_1.c  heap_test_2.c  run_tests.sh
zephyr-examples/: README.md  source_me_zephyr_mac.sh  source_me_zephyr_ubuntu.sh
zephyr-examples/button_blinky/: CMakeLists.txt  Makefile  button_blinky.svm  nrf52840dk_nrf52840.overlay  nrf52_module.overlay  nrf_module_v1.overlay  vm-conf.h
zephyr-examples/button_blinky/src/: main.c
zephyr-examples/choose-four/: Makefile  choose_four.cam  choose_four.svm  nrf52840dk_nrf52840.overlay  prj.conf  vm-conf.h
zephyr-examples/four-button-fsm/: CMakeLists.txt  Makefile  button_fsm.cam  larger_button_fsm.cam  step1.cam  step2.cam  step3.cam  test.cam  testing2.cam  vm-conf.h
zephyr-examples/tripple-press/: Makefile  prj.conf  tripple.cam  tripple.svm  vm-conf.h
(+697 files in other folders)
